# unitree-go2-path-planner

./: .gitignore  .gitmodules  LICENCE  README.md
docker/: Dockerfile_ros2_humble_go2  compose_gpu.yml
scripts/: extract_data_real_robot.py  markers.rviz  parse_rosbag.py  robot_launch.launch.py
scripts/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
scripts/log/: latest_build
src/: extract_data.py
src/FAST_LIO/config/: unitree_go2_mid360.yaml
src/FAST_LIO/launch/: mapping.launch.py
src/FAST_LIO/rviz/: fastlio.rviz
src/cw1_team_12/: package.xml  setup.cfg  setup.py
src/cw1_team_12/config/: parameters.json
src/cw1_team_12/cw1_team_12/: bug0.py  bug1.py  obstacle_follower.py
src/cw1_team_12/launch/: run_solution_task_1.launch.py  run_solution_task_2.launch.py  run_solution_task_3.launch.py
src/cw1_team_12/test/: bug1_all_markers.rviz
src/edge_follower/: package.xml  setup.cfg  setup.py
src/edge_follower/edge_follower/: ccw_bozuk  ccw_kirli.py  chaikin_smooth.py  chaikin_son.py  deneme.py  deneme2.py  douglas_peucker.py  edge_follower_node.py  enis_bug0.py  parameters.json  stuck_son  ziya_bug0.py
src/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
src/local_map_creator/: package.xml  setup.cfg  setup.py
src/local_map_creator/local_map_creator/: local_map_node.py
src/local_map_creator/local_map_creator/install/: local_setup.sh  setup.sh
src/local_map_creator/local_map_creator/log/: latest_build
src/log/: latest_build
src/unitree-go2-ros2/: README.md
src/unitree_circular_motion/: package.xml  setup.cfg  setup.py
src/unitree_circular_motion/scripts/: circular_motion.py  demo01.py  eight_motion.py
src/unitree_go2_example/: CMakeLists.txt  package.xml
src/unitree_go2_example/src/: forward_cmd_sport_mode_ctrl.cpp
src/waypoint_follower/: package.xml  setup.py
src/waypoint_follower/launch/: path_following.launch.py
src/waypoint_follower/rviz/: path_following.rviz
src/waypoint_follower/waypoint_follower/: goalpose_follower.py  odometry_conversion.py  path_follower.py  path_follower_LQR.py  path_follower_mpc.py  (+10 more)
(+53 files in other folders)
